Add firts css loader and webpack.config.js

--- a/getting-started/index.html
+++ b/getting-started/index.html
@@ -5,20 +5,31 @@
 	<title>Getting Started</title>
 </head>
 <body>
-	<ul>
-		<li>
-			Add index.js
-		</li>
-		<li>
-			Add index.html
-		</li>
-		<li>
-			execute > webpack index.js bundle.js
-		</li>
-		<li>
-			add bundle.js in index.html
-		</li>
-	</ul>
+	<div class="container">
+		<ul>
+			<li>
+				Add index.js .
+			</li>
+			<li>
+				Add index.html
+			</li>
+			<li>
+				execute > webpack index.js bundle.js
+			</li>
+			<li>
+				add bundle.js in index.html
+			</li>
+			<li>
+				alias webpack="webpack --progress --color"
+			</li>
+			<li>
+				alias webpackw="webpack --progress --color --watch"
+			</li>
+			<li>
+				Js content needs reload page!
+			</li>
+		</ul>
+	</div>
 	<script src="bundle.js"></script>
 </body>
 </html>
