--- a/04-vue-ssr/index.html
+++ b/04-vue-ssr/index.html
@@ -6,6 +6,6 @@
 </head>
 <body>
 	<div id="app"></div>
-	<script src="build/dist/bundle.js"></script>
+	<script src="/dist/client/main.js"></script>
 </body>
 </html>
