--- a/05-vue-ssr-news/src/index.html
+++ b/05-vue-ssr-news/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Vue SSR</title>
+	<title>Vue SSR Tutorial</title>
 </head>
 <body>
 	<div id="app"></div>
