keep repo clean remove dist files and update code

--- a/04-vue-ssr/src/index.template.html
+++ b/04-vue-ssr/src/index.template.html
@@ -3,8 +3,14 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Hello SSR</title>
+  <style>
+    #skip a {  position:absolute;  left:-10000px;  top:auto;  width:1px;  height:1px;  overflow:hidden;  }
+    #skip a:focus {  position:static;  width:auto;  height:auto;  }
+  </style>
 </head>
 <body>
+	<div id="skip"><a href="#app">skip to content</a></div>
 	<!--vue-ssr-outlet-->
+	<!-- <script src="/dist/client/main.js"></script> -->
 </body>
 </html>
