--- a/04-vue-ssr/index.html
+++ b/04-vue-ssr/index.html
@@ -6,6 +6,12 @@
 </head>
 <body>
 	<div id="app"></div>
+<!-- 	<script src="/dist/client/0.js"></script>
+	<script src="/dist/client/1.js"></script>
+	<script src="/dist/client/2.js"></script>
+	<script src="/dist/client/3.js"></script>
+	<script src="/dist/client/4.js"></script>
+	<script src="/dist/client/vendor.js"></script> -->
 	<script src="/dist/client/main.js"></script>
 </body>
 </html>
